--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       color: orange;
     }
     .card-body {
-      padding: 20px; /* Add padding to the card body */
+      padding: 20px; 
     }
   </style>
 </head>
@@ -77,7 +77,7 @@
     <div class="col-md-4">
       <div class="card">
         <div class="body">
-          <img src="x.png" class="img-fluid" style="max-width: 200px;">
+          <img src="X.png" class="img-fluid" style="max-width: 200px;">
           <button class="btn btn-link btn-center">XRP</button>
         </div>
       </div>
